--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,6 @@
                 android:layout_height="150dp"
                 android:src="@drawable/sahyog1"
                 android:background="@color/white"
-
                 android:layout_centerHorizontal="true">
             </ImageView>
 
@@ -34,7 +33,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="25dp"
-                android:text="Sign in your Account"
+                android:text="Sign in to your Account"
                 android:gravity="center"
                 android:layout_marginTop="25dp"
                 android:layout_below="@id/icon">
@@ -96,8 +95,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Forgot password?"
+                android:textSize="15dp"
+                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="18dp"
                 android:gravity="center"
                 android:layout_below="@id/signinbutton">
             </TextView>
@@ -107,6 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign in with"
+                android:textSize="18dp"
                 android:textColor="@color/white"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
@@ -153,7 +155,7 @@
                 android:textColor="@color/white"
                 android:layout_below="@id/signinbutton"
                 android:gravity="center"
-                android:layout_marginTop="160dp">
+                android:layout_marginTop="165dp">
             </TextView>
 
             <TextView
@@ -164,23 +166,10 @@
                 android:textSize="15dp"
                 android:textColor="@color/white"
                 android:layout_below="@id/already"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:textStyle="bold">
             </TextView>
-
-            <!--        <com.google.android.material.button.MaterialButton-->
-            <!--            android:id="@+id/signup1"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent"-->
-            <!--            android:layout_below="@id/already"-->
-            <!--            android:layout_marginHorizontal="120dp"-->
-            <!--            android:text="Sign up"-->
-            <!--            android:gravity="center"-->
-            <!--            style="?android:attr/borderlessButtonStyle"-->
-            <!--            android:backgroundTint="#00000000">-->
-            <!--        </com.google.android.material.button.MaterialButton>-->
-
         </RelativeLayout>
     </RelativeLayout>
-
 </ScrollView>
