--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             </TextView>
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/signin_text"
@@ -53,7 +53,7 @@
                 android:background="#B39DDB"
                 android:drawableLeft="@drawable/ic_baseline_account_box_24"
                 android:drawablePadding="10dp"
-                android:hint="Username"
+                android:hint="email"
                 android:padding="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -62,7 +62,7 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_below="@id/username"
+                android:layout_below="@id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="35dp"
