--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -45,6 +45,7 @@
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:drawablePadding="12dp"
             android:hint="Enter your email"
+            android:inputType="textEmailAddress"
             android:padding="15dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
