--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                 android:drawableLeft="@drawable/ic_baseline_account_box_24"
                 android:drawablePadding="10dp"
                 android:hint="email"
+                android:inputType="textEmailAddress"
                 android:padding="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -67,7 +68,7 @@
                 android:layout_marginHorizontal="35dp"
                 android:background="#B39DDB"
                 android:inputType="textPassword"
-                android:hint="Passsword"
+                android:hint="Password"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:padding="15dp"
