--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -50,6 +50,7 @@
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="Enter your email"
+               android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white">
@@ -62,6 +63,7 @@
                android:layout_below="@id/email"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
+               android:inputType="number"
                android:background="#B39DDB"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:drawablePadding="10dp"
